[project]
name = "comfyui_yvann-nodes"
description = "In Progress"
version = "1.0.4"
license = {file = "LICENSE"}
dependencies = ["openunmix", "numpy", "torch", "matplotlib", "pillow"]

[project.urls]
Repository = "https://github.com/yvann-ba/ComfyUI_Yvann-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yvann"
DisplayName = "ComfyUI_Yvann-Nodes"
Icon = ""
