[project]
name = "comfyui_yvann-nodes"
description = "Audio reactivity nodes for AI animations 🔊 Analyze audio, extract drums and vocals. Generate reactive masks and weights. Create audio-driven visuals. Produce weight graphs and audio masks. Compatible with IPAdapter, ControlNets and more. Ideal for music videos and reactive animations. Features audio scheduling and waveform analysis"
version = "1.0.9"
license = {file = "LICENSE"}
dependencies = ["openunmix", "numpy", "torch", "matplotlib", "pillow"]

[project.urls]
Repository = "https://github.com/yvann-ba/ComfyUI_Yvann-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yvann"
DisplayName = "ComfyUI_Yvann-Nodes"
Icon = ""
